--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -154,7 +154,7 @@ e技能--元素战技  q技能--元素爆发   <br/>
 xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br/>
 
 现在在攒原石，等12.27号3.3版本下半场雷神复刻。同时收集材料：雷音权现的雷云庭珠，最胜紫晶、名刀镡、天云草实。技能天赋材料：「天光」的哲学、溶毁之刻、名刀镡、智识之冕。 <br/>
-小保底90抽之前歪了，大保底90抽没问题了。抽到雷神的话，看看能否有行秋，和班尼特香菱组成雷神国家队。 <br/>
+小保底90抽之前歪了提纳里，大保底90抽没问题了。抽到雷神的话，看看能否有行秋，和班尼特香菱组成雷神国家队。 <br/>
 --20221219
 
 
@@ -201,6 +201,53 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 
 <br/>
 
+12.芭芭拉 夜兰 胡桃
+
+海染套芭芭拉yyds，既能回血又能输出，伤害最多有两万七左右。萌新即可装备，全面碾压少女套芭芭拉。[海染砗磲]( https://bbs.mihoyo.com/ys/obc/content/3157/detail ) ，芭芭拉冲鸭。<br/>
+3.4下半夜兰胡桃up，行秋凝光北斗陪跑，傍晚六点开始，期待着。<br/>
+
+--20230207
+
+<br/>
+
+上个版本3.3雷电将军版本非酋本酋，运气太差，100多抽大保底只出了一金零命雷神。<br/>
+这个版本3.4夜兰胡桃版本运气爆棚，欧皇附体，100多抽三金小保底**夜兰胡桃护摩之仗**。<br/>
+本来是想着零命夜兰，痴想一下一命。也只准备了夜兰的材料和武器。
+但是昨天在抽卡之前跟我一个大佬同事说了一下，一队雷国配齐了，二队还没影子。建议我如果抽到夜兰可以再抽胡桃，然后竟然真的都抽到了，再来个骚操作，反向定轨夜兰专武若水，不到十抽竟然又获得了胡桃专武护摩。<br/>
+人生的大起大落实在是太突然了，一个多月前还只有一个常驻五星提纳里，而现在t0级两支队伍都有了。<br/>
+
+<br/>
+
+现在我的配队是，一队雷神国家队：雷电将军、班尼特、行秋、香菱。二队胡夜莱芭：胡桃、夜兰、芭芭拉、莱依拉或者砂糖。<br/>
+一队算是小毕业了，dps 15秒4.2w伤害，暂时可以不用再提升了。<br/>
+二队夜兰等级升到81级了，天赋eq还要升到10级。[胡桃]( https://bbs.mihoyo.com/ys/obc/content/1627/detail )之前没想过可以抽到，材料没准备，还要慢慢升级。<br/>
+五星武器护摩之仗也很难得，要升级。芭芭拉要刷海染套，打点输出。<br/>
+这里稍微吐槽一下胡桃的操作，需要半血开E重击才有高伤害。没有雷国队那么无脑方便，哪里亮了点哪里。<br/>
+还要练习一下胡桃的操作技术，重击+跳跃+闪避，真是手残党的大难题。。<br/>
+
+<br/>
+
+从这次抽奖也有一些感受：<br/>
+1、厚积才能薄发，之前肝了一个多月，攒了一两万原石，十几个粉球，一大堆材料。这次抽卡才能一举建功。<br/>
+2、困境是暂时的，低谷是短促的，没有人永远是非酋，也没有人永远是欧皇。合理规划，默默积蓄，终会守得云开见月明。<br/>
+3、万事平常心，厉害的、平常的、失败的、成功的，放眼世界，都是沧海一粟。<br/>
+4、喜欢是王道，喜欢原神，喜欢原神的角色与剧情，才能一直玩下去。<br/>
+5、有大佬指点确实比自己摸索更有效率和效果。<br/>
+6、合理安排游戏时间，现实生活才是真实。<br/>
+7、走自己的路，让别人说去吧。<br/>
+
+--20230208
+
+<br/>
+
+一个角色从零开始培养的优先级是：等级>天赋>武器>圣遗物。前三个可以并行升级，圣遗物就要慢慢坐牢了。<br/>
+胡桃重击战斗确实相当难练，而且还是半血开E重击伤害最高。三个天赋都要升级，还要刷魔女套，还要盾保护一下，还要练习重击跳跃闪避手法。真是高投入，高风险，高回报的典范。 <br/>
+夜兰大世界跑图很丝滑，伤害也很高，还能后台增伤，不愧是夜天后，属于必抽角色。 <br/>
+芭芭拉海染套的伤害在胡夜莱（胡行钟）体系简直属于锦上添花的锦上添花，因为需要驻场，而且最大伤害就三万左右。大世界无所谓，但是挑战深渊的话，这点伤害完全不够看。芭芭拉在这个体系主要是凑双水和回血，加个讨龙提升攻击力。如果已经有毕业的少女套，那么刷海染套就是投入高，收益小的事。如果才开始刷圣遗物，海染套比少女套更适合芭芭拉。 <br/>
+--20230213
+
+<br/>
+
 
 ### 2.2、感想
 
@@ -235,6 +282,16 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 人生是在不停的赶路，但是慢下来也许会有不一样的感受。 <br/>
 --20221222
 
+<br/>
+
+角色培养，强度提升。旅行者和提瓦特人物一起成长。原神需要慢慢养成。 <br/>
+环游提瓦特三个多月，终于凑齐了两队，雷神国家队：雷电将军、班尼特、行秋、香菱。胡夜莱芭：胡桃、夜兰、芭芭拉、莱依拉。 <br/>
+逐渐开始长草，任务宝箱奖励越来越少，今后的重心将以培养两支队伍为主。<br/>
+挑战深渊，追求极限。不疾不徐，缓步前行。<br/>
+旅行世界，探索解密。云起云落，心平气和。<br/>
+--20230213
+
+
 ---
 
 <br/>
@@ -246,7 +303,7 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 
 [行秋]( https://bbs.mihoyo.com/ys/obc/content/241/detail )  少年春衫薄<br/>
 
-等级突破材料需要： <br/>
+lv1-90等级突破材料需要： <br/>
 涤净青金碎屑×1、涤净青金断片×9、涤净青金块×9、涤净青金×6；净水之心×46；霓裳花×168；<br/>
 破损的面具×18、污秽的面具×30、不祥的面具×36；摩拉×2092530、大英雄经验419。 <br/>
 
@@ -261,13 +318,13 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 
 [夜兰]( https://bbs.mihoyo.com/ys/obc/content/4081/detail )  兰生幽谷 <br/>
 
-等级突破材料： <br/>
+lv1-90等级突破材料： <br/>
 涤净青金碎屑x1、涤净青金断片x9、涤净青金块x9、涤净青金x9、符纹之齿x46、星螺x168；  <br/>
-新兵的徽记x18、士官的徽记x30、尉官的徽记x36。 <br/>
+新兵的徽记x18、士官的徽记x30、尉官的徽记x36；摩拉×2092530、大英雄经验419。 <br/>
 
-天赋升级材料： <br/>
-繁荣的教导x3+繁荣的指引x21+繁荣的哲学x38+鎏金之鳞x6+1个皇冠+165万摩拉； <br/>
-新兵的徽记x6+士官的徽记x22+尉官的徽记x31。 <br/>
+单个天赋升级材料： <br/>
+繁荣的教导x3+繁荣的指引x21+繁荣的哲学x38，周一、周四、周日从秘境太山府获取。 <br/>
+新兵的徽记x6+士官的徽记x22+尉官的徽记x31+鎏金之鳞x6+1个皇冠+165万摩拉。 <br/>
 
 
 涤净青金需要打败**纯水精灵**或者无相之水获得。 <br/>
@@ -295,20 +352,14 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 
 > 升级材料
 
-雷神等级培养材料包括摩拉2092530，天云草实168，大英雄经验419，最胜紫晶碎屑1、断片9、晶块9、紫晶6，刀镡系列18、30、36，[雷霆数珠]( https://bbs.mihoyo.com/ys/obc/content/2615/detail )46。<br/>
+雷神等级培养材料包括摩拉2092530，天云草实168，大英雄经验419，最胜紫晶碎屑1、最胜紫晶断片9、最胜紫晶块9、最胜紫晶6，破旧的刀镡18、影打刀镡30、名刀镡36，[雷霆数珠]( https://bbs.mihoyo.com/ys/obc/content/2615/detail )46。<br/>
 一种天赋材料需要摩拉1652500，智识之冕1，熔毁之刻6，天光系列（教导指引哲学）3、21、38，[刀镡]( https://www.baidu.com/s?wd=%E5%88%80%E9%95%A1%E6%98%AF%E5%BF%B5tan%E8%BF%98%E6%98%AFxin&rsv_spt=1&rsv_iqid=0xd7a925f4006833e8&issp=1&f=8&rsv_bp=1&rsv_idx=2&ie=utf-8&tn=baiduhome_pg&rsv_dl=tb&rsv_enter=0&rsv_n=2&rsv_btype=i&inputT=1427&rsv_sug4=1427 )系列（破旧影打名刀镡）6、22、31。<br/>
 三种天赋材料总计包括摩拉4957500，智识之冕3，熔毁之刻18，天光系列（教导指引哲学）9、63、114，刀镡系列（破旧影打名刀镡）18、66、93。<br/>
 性价比最高是1-9-10，普通天赋可以不升级，元素战技升到9级，元素爆发最好升到10级。
 
  <br/>
 
-雷电将军**等级突破** LV1-90 所需材料: <br/>
-最胜紫晶碎屑×1 破旧的刀镡×18 雷霆数珠×46  <br/>
-最胜紫晶断片×9 影打刀镡×30 天云草实×168  <br/>
-最胜紫晶块×9 名刀镡×36 摩拉×420000  <br/>
-最胜紫晶×6  <br/>
-
-
+**等级突破**材料: <br/>
 20级：最胜紫晶碎屑x1+天云草实x3+破旧的刀镡x3+2万摩拉  <br/>
 40级：最胜紫晶断片x3+雷霆数珠x2+天云草实x10+破旧的刀镡x15+4万摩拉  <br/>
 50级：最胜紫晶断片x6+雷霆数珠x4+天云草实x20+影打刀镡x12+6万摩拉  <br/>
@@ -319,12 +370,7 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 <br/>
 
 
-雷电将军**天赋突破** LV1-10 所需材料: <br/>
-天光的教导×3 破旧的刀镡×6 熔毁之刻×6  <br/>
-天光的指引×21 影打刀镡×22 智识之冕×1  <br/>
-天光的哲学×38 名刀镡×31 摩拉×1652500  <br/>
-
-
+**天赋突破**材料: <br/>
 2级：天光的教导x3+破旧的刀镡x6  <br/>
 3级：天光的指引x2+影打刀镡x3  <br/>
 4级：天光的指引x4+影打刀镡x4  <br/>
@@ -870,7 +916,7 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 
 来自 https://bbs.mihoyo.com/ys/article/30600790
 
-<mermaid>
+```mermaid
 graph TD
 雷 --> | 感电 | 水;
 雷 --> | 超载 | 火;
@@ -890,11 +936,11 @@ graph TD
 冰 --> | 超导 | 雷;
 冰 --> | 冻结 | 水;
 
-</mermaid>
+```
 
 ---
 
-<mermaid>
+```mermaid
 graph LR
 元素反应 --> A1[增幅]
 元素反应 --> B1[剧变]
@@ -933,7 +979,7 @@ D11--> D121[草水]
 D12--> D122[草水雷]
 D13--> D123[草水火]
 
-</mermaid>
+```
 
 - 三种元素，超绽放烈绽放伤害最高。
 
@@ -946,7 +992,7 @@ D13--> D123[草水火]
 来自 https://bbs.mihoyo.com/ys/article/2050152
 
 
-<mermaid>
+```mermaid
 graph LR
 元素反应 --> A1[增伤类]
 元素反应 --> B1[额外伤害类]
@@ -981,7 +1027,7 @@ C121--> C1211[结晶盾承受量仅与等级及元素精通有关]
 D11--> D121[水草]
 D12--> D122[水冰]
 
-</mermaid>
+```
 
 - 元素反应的伤害均与**触发角色**的**元素精通**有着密切的联系。
 - 两种元素，超载的群体伤害最高，感电的单体伤害最高。
