--- a/docs/关于我.md
+++ b/docs/关于我.md
@@ -33,15 +33,15 @@
 
 起初&ensp;对书法有兴趣 <br/>
 开始练字&ensp;找个地方记录练习历程 <br/>
-左思右想&ensp;`项目`取名叫做《[书法练习轨迹]( https://xushufa.cn/%E8%BD%A8%E8%BF%B9/%E4%B9%A6%E6%B3%95%E7%BB%83%E4%B9%A0%E8%BD%A8%E8%BF%B9--%E6%98%8E%E6%9C%88%E5%87%A0%E6%97%B6%E6%9C%89-%E6%97%A0%E5%9B%BE%E7%89%88.html )》 <br/>
+左思右想&ensp;`项目`取名叫做《[书法练习轨迹]( https://vuepress-calligraphy.xushufa.cn/%E7%BB%83%E4%B9%A0/%E4%B9%A6%E6%B3%95%E7%BB%83%E4%B9%A0%E8%BD%A8%E8%BF%B9ReadMe.html )》 <br/>
 
 后来&ensp;内容变多  <br/>
 倾诉欲更强&ensp;注册了公众号 <br/>
-综合考虑&ensp;`笔名`及账号《[无为徐生]( https://xushufa.cn/%E7%BB%83%E4%B9%A0/%E6%97%A0%E4%B8%BA%E5%BE%90%E7%94%9F.html )》诞生了 <br/>
+综合考虑&ensp;`笔名`及账号《[无为徐生]( https://vuepress-blog.xushufa.cn/%E4%B9%A6%E6%B3%95/%E7%BB%83%E4%B9%A0/%E6%97%A0%E4%B8%BA%E5%BE%90%E7%94%9F.html )》诞生了 <br/>
 
 现在&ensp;记录已成习惯  <br/>
 于是注册域名&ensp;自建`网站`  <br/>
-两者集合&ensp;创造了《[徐书法]( https://xushufa.cn/%E7%BB%83%E4%B9%A0/%E5%BE%90%E4%B9%A6%E6%B3%95.html )》 <br/>
+两者集合&ensp;创造了《[徐书法]( https://reco-blog.xushufa.cn/docs/shu-fa/lian-xi/xu-shu-fa.html )》 <br/>
 
 ---
 
@@ -63,7 +63,7 @@
 
 **微信公众号，每周一在此更新书法练习轨迹。** 
 
-[话题]( https://mp.weixin.qq.com/mp/appmsgalbum?__biz=Mzg4NDY2OTM0Mg==&action=getalbum&album_id=2015671980393365504 ) &ensp; [二维码]( https://md.xushufa.cn/gitimg/imgs/other/wuweixusheng_weixin.png )
+[话题]( https://mp.weixin.qq.com/mp/appmsgalbum?__biz=Mzg4NDY2OTM0Mg==&action=getalbum&album_id=2015671980393365504 ) &ensp; [二维码]( https://xyqin.coding.net/public/my/imgs/git/files/master/other/wuweixusheng_weixin.png )
 
 ---
 
@@ -77,9 +77,9 @@
 
 | 徐书法 | 地址        |  备注          |
 | -----  | ----------- |  ------------- |
-| 1      | [xushufa.cn]( https://xushufa.cn )            | 书法练习轨迹网站。                   |
-| 2      | [blog.xushufa.cn]( https://blog.xushufa.cn )  | `vuepress`构建的博客网站。           |
-| 3      | [web.xushufa.cn]( https://web.xushufa.cn )    | `vuepress-theme-reco`构建的博客网站。|
+| 1      | [xushufa]( https://vuepress-calligraphy.xushufa.cn )   | 书法练习轨迹网站。                   |
+| 2      | [vuepress-blog]( https://vuepress-blog.xushufa.cn )  | `vuepress`构建的博客网站。           |
+| 3      | [reco-blog]( https://reco-blog.xushufa.cn )    | `vuepress-theme-reco`构建的博客网站。|
 
 ---
 
