--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -5,11 +5,11 @@
 
 ### 1.1、介绍
 
-《我的原神旅行观测记录》，又名《[原神之旅]( https://blog.xushufa.cn/%E7%94%9F%E6%B4%BB/%E9%9A%8F%E7%AC%94/%E6%88%91%E7%9A%84%E5%8E%9F%E7%A5%9E%E6%97%85%E8%A1%8C%E8%A7%82%E6%B5%8B%E8%AE%B0%E5%BD%95.html )》，记之以事，述之以情。<br/>
+《我的原神旅行观测记录》，又名《[原神之旅]( https://vuepress-blog.xushufa.cn/%E7%94%9F%E6%B4%BB/%E9%9A%8F%E7%AC%94/%E6%88%91%E7%9A%84%E5%8E%9F%E7%A5%9E%E6%97%85%E8%A1%8C%E8%A7%82%E6%B5%8B%E8%AE%B0%E5%BD%95.html )》，记之以事，述之以情。<br/>
 自二零二二年十一月初开始下载原神，第一次玩这款全球知名游戏。安装包300多兆，但是装好后还要下载18g的资源，确实很大。<br/>
 之前只玩过功能比较简单、内容相对单一的游戏，像qq农场、部落冲突、天天酷跑、和平精英等等。<br/>
 世界规模如此巨大，内容剧情如此精彩，画面色彩如此绚丽的游戏还是首次接触。<br/>
-想不到一接触就入迷了，一入迷难以自拔，故此记录，以作[旅行]( https://gitcode.net/xu180/document/-/blob/master/article/%E7%94%9F%E6%B4%BB/%E9%9A%8F%E7%AC%94/%E6%88%91%E7%9A%84%E5%8E%9F%E7%A5%9E%E6%97%85%E8%A1%8C%E8%A7%82%E6%B5%8B%E8%AE%B0%E5%BD%95.md )感想。<br/>
+想不到一接触就入迷了，一入迷难以自拔，故此记录，以作[旅行]( https://gitcode.net/xu180/document/-/blob/master/article/%E9%9A%8F%E7%AC%94/%E6%88%91%E7%9A%84%E5%8E%9F%E7%A5%9E%E6%97%85%E8%A1%8C%E8%A7%82%E6%B5%8B%E8%AE%B0%E5%BD%95.md )感想。<br/>
 原神UID：254901679，欢迎加好友。文档记录于个人[网站]( https://web.xushufa.cn )，欢迎浏览。<br/>
 --20221124
 
@@ -338,6 +338,62 @@ lv1-90等级突破材料： <br/>
 
 <br/>
 
+---
+
+[钟离]( https://bbs.mihoyo.com/ys/obc/content/1290/detail ) 璃月岩神 <br/>
+
+lv1-90等级突破材料： <br/>
+玄岩之塔46个，石珀168个，坚牢黄玉碎屑1个，坚牢黄玉断片9个，坚牢黄玉块9个，坚牢黄玉6个， <br/>
+史莱姆凝液18个，史莱姆清30个，史莱姆原浆36个，2092530摩拉，大英雄经验419。 <br/>
+	
+单个天赋升级材料： <br/>
+黄金的教导x3、黄金的指引x21、黄金的哲学x38、史莱姆凝液x6、史莱姆清x22、史莱姆原浆x31、 <br/>
+智识之冕x1、**吞天之鲸·只角**x6、165万摩拉。 <br/>
+
+<br/>
+
+---
+
+### 2.4、快捷键
+
+> 原神电脑端操作快捷键
+
+E-元素战技							<br/>
+Q-元素爆发                          <br/>
+F-拾取                              <br/>
+J-任务页面                          <br/>
+C-角色页面                          <br/>
+B-背包                              <br/>
+L-编队                              <br/>
+                                    <br/>
+O-好友                              <br/>
+G-教程                              <br/>
+M-地图                              <br/>
+V-追踪                              <br/>
+P-中端挑战                          <br/>
+Y-通知详情                          <br/>
+                                    <br/>
+F1-冒险之证                         <br/>
+F2-联机                             <br/>
+F3-抽卡祈愿                         <br/>
+F4-纪行                             <br/>
+F5-活动                             <br/>
+                                    <br/>
+AWSD-角色移动                       <br/>
+12345-切换角色                      <br/>
+鼠标滚轮-元素视野                   <br/>
+鼠标左键-普通攻击                   <br/>
+鼠标右键或左shift-冲刺              <br/>
+                                    <br/>
+space-起飞/降落/攀爬时向上跳        <br/>
+ESC-打开派蒙界面                    <br/>
+Enter-聊天页面                      <br/>
+Ctrl-切换走路/跑步状态              <br/>
+
+
+---
+
+<br/>
 
 
 ## 3、观测枢
