--- a/docs/目录.md
+++ b/docs/目录.md
@@ -9,6 +9,7 @@
   - [日常Note](生活/随笔/日常Note.md)
   - [驾考记事](生活/随笔/驾考记事.md)
   - [健身与学习](生活/随笔/健身与学习.md)
+  - [吉他练习笔记](生活/随笔/吉他练习笔记.md)
   - [二十四式太极拳](生活/随笔/二十四式太极拳.md)
   - [短期远行必备物品](生活/随笔/短期远行必备物品.md)
   - [我的原神旅行观测记录](生活/随笔/我的原神旅行观测记录.md)
@@ -120,14 +121,14 @@
 
 | 徐书法 | 地址        |  备注          |
 | -----  | ----------- |  ------------- |
-| 1      | [xushufa.cn]( https://xushufa.cn )            | 书法练习轨迹网站。                   |
-| 2      | [blog.xushufa.cn]( https://blog.xushufa.cn )  | `vuepress`构建的博客网站。           |
-| 3      | [web.xushufa.cn]( https://web.xushufa.cn )    | `vuepress-theme-reco`构建的博客网站。|
+| 1      | [xushufa]( https://vuepress-calligraphy.xushufa.cn ) | 书法练习轨迹网站。                   |
+| 2      | [vuepress-blog]( https://vuepress-blog.xushufa.cn )  | `vuepress`构建的博客网站。           |
+| 3      | [reco-blog]( https://reco-blog.xushufa.cn )          | `vuepress-theme-reco`构建的博客网站。|
 
 ---
 
 ## 导图
 
-![文档导图]( https://md.xushufa.cn/gitimg/imgs/other/thinking/文档导图.svg )
+![文档导图]( https://xyqin.coding.net/public/my/imgs/git/files/master/other/thinking/%E6%96%87%E6%A1%A3%E5%AF%BC%E5%9B%BE.png )
 
 
