--- a/docs/关于我.md
+++ b/docs/关于我.md
@@ -4,7 +4,7 @@
 
 徐永钦<br/>
 生于无为，学于合肥，居于杭州。<br/>
-程序开发，书法练习，上下求索。<br/>
+程序开发，书法吉他，上下求索。<br/>
 君子不器，学且与思，知行合一。<br/>
 温故知新，记而不作，未来已来。<br/>
 
@@ -14,22 +14,24 @@
 
 ---
 
-<br/>
+## 关于
 
-> 关于编程
+> 编程
 
-**技术还可以的程序猿。**
+**技术还可以的程序猿。 （2016--至今）**
 
 会 `java`  `linux`  `mysql` `redis` ...  <br/>
-用 `git` `idea` `postman` `notepad++` ...  <br/>
+用 `git` `idea` `postman` `markdown` ...  <br/>
+
+笔记仓库 [**gitlab**]( https://gitlab.com/xuyq123/mynotes ) &ensp; [github]( https://github.com/scott180/calligraphy ) &ensp;  [coding]( https://xyqin.coding.net/public/my/calligraphy/git ) 
 
 ---
 
 <br/>
 
-> 关于书法
+> 书法
 
-**书法爱好者，练字中。**
+**书法爱好者，练字。（2020.9--2022.10）**
 
 起初&ensp;对书法有兴趣 <br/>
 开始练字&ensp;找个地方记录练习历程 <br/>
@@ -47,23 +49,11 @@
 
 <br/>
 
-## 账号
+> 吉他
 
-> git项目：书法练习轨迹
+**变是唯一的不变，现在对吉他有兴趣。（2023.5--）**
 
-**记录每周练字情况、字帖照片及一些感想。**
-
-[**gitlab**]( https://gitlab.com/xuyq123/calligraphy ) &ensp; [github]( https://github.com/scott180/calligraphy ) &ensp;  [coding]( https://xyqin.coding.net/public/my/calligraphy/git ) 
-
----
-
-<br/>
-
-> 公众号：无为徐生
-
-**微信公众号，每周一在此更新书法练习轨迹。** 
-
-[话题]( https://mp.weixin.qq.com/mp/appmsgalbum?__biz=Mzg4NDY2OTM0Mg==&action=getalbum&album_id=2015671980393365504 ) &ensp; [二维码]( https://xyqin.coding.net/public/my/imgs/git/files/master/other/wuweixusheng_weixin.png )
+二零二三年五月下旬突然心血来潮的对吉他有了兴趣，于是开始了音乐之旅。
 
 ---
 
@@ -77,22 +67,9 @@
 
 | 徐书法 | 地址        |  备注          |
 | -----  | ----------- |  ------------- |
-| 1      | [xushufa]( https://vuepress-calligraphy.xushufa.cn ) | 书法练习轨迹网站。                   |
+| 1      | [xushufa]( https://xuyq123.gitlab.io/mkdocs-blog )   | `mkdocs`构建的博客网站。             |
 | 2      | [vuepress-blog]( https://vuepress-blog.xushufa.cn )  | `vuepress`构建的博客网站。           |
 | 3      | [reco-blog]( https://reco-blog.xushufa.cn )          | `vuepress-theme-reco`构建的博客网站。|
-
----
-
-<br/>
-
-> 工具网站
-
-**工具网站及网站地图。**
-
-| 序号   | 地址        |  备注          |
-| -----  | ----------- |  ------------- |
-| 1      | [tool.xushufa.cn]( https://tool.xushufa.cn ) | 工具网站。在线预览markdown、解析json、url解码、时间戳转换等。  |
-| 2      | [md.xushufa.cn]( https://md.xushufa.cn )     | xushufa网站地图，nginx网页目录结构。|
 
 ---
 
