--- a/docs/目录.md
+++ b/docs/目录.md
@@ -121,14 +121,9 @@
 
 | 徐书法 | 地址        |  备注          |
 | -----  | ----------- |  ------------- |
-| 1      | [xushufa]( https://vuepress-calligraphy.xushufa.cn ) | 书法练习轨迹网站。                   |
+| 1      | [xushufa]( https://xuyq123.gitlab.io/mkdocs-blog )   | `mkdocs`构建的博客网站。             |
 | 2      | [vuepress-blog]( https://vuepress-blog.xushufa.cn )  | `vuepress`构建的博客网站。           |
 | 3      | [reco-blog]( https://reco-blog.xushufa.cn )          | `vuepress-theme-reco`构建的博客网站。|
 
 ---
-
-## 导图
-
-![文档导图]( https://xyqin.coding.net/public/my/imgs/git/files/master/other/thinking/%E6%96%87%E6%A1%A3%E5%AF%BC%E5%9B%BE.png )
-
 
