--- a/docs/书法/练习/古文诗词.md
+++ b/docs/书法/练习/古文诗词.md
@@ -2258,9 +2258,9 @@
 
 | 徐书法 | 地址        |  备注          |
 | -----  | ----------- |  ------------- |
-| 1      | [xushufa.cn]( https://xushufa.cn )            | 书法练习轨迹网站。                   |
-| 2      | [blog.xushufa.cn]( https://blog.xushufa.cn )  | `vuepress`构建的博客网站。           |
-| 3      | [web.xushufa.cn]( https://web.xushufa.cn )    | `vuepress-theme-reco`构建的博客网站。|
+| 1      | [xushufa]( https://xushufa.cn )                  	    | `vuepress-theme-reco`构建的博客网站。|
+| 2      | [vuepress-blog]( https://vuepress-blog.xushufa.cn )  	| `vuepress`构建的博客网站。           |
+| 3      | [mkdocs-blog]( https://xuyq123.gitlab.io/mkdocs-blog )   | `mkdocs`构建的博客网站。             |
 
 ---
 
