--- a/docs/目录.md
+++ b/docs/目录.md
@@ -121,9 +121,9 @@
 
 | 徐书法 | 地址        |  备注          |
 | -----  | ----------- |  ------------- |
-| 1      | [xushufa]( https://xuyq123.gitlab.io/mkdocs-blog )   | `mkdocs`构建的博客网站。             |
-| 2      | [vuepress-blog]( https://vuepress-blog.xushufa.cn )  | `vuepress`构建的博客网站。           |
-| 3      | [reco-blog]( https://reco-blog.xushufa.cn )          | `vuepress-theme-reco`构建的博客网站。|
+| 1      | [xushufa]( https://xushufa.cn )                  	    | `vuepress-theme-reco`构建的博客网站。|
+| 2      | [vuepress-blog]( https://vuepress-blog.xushufa.cn )  	| `vuepress`构建的博客网站。           |
+| 3      | [mkdocs-blog]( https://xuyq123.gitlab.io/mkdocs-blog )   | `mkdocs`构建的博客网站。             |
 
 ---
 
