--- a/docs/书法/轨迹/自序.md
+++ b/docs/书法/轨迹/自序.md
@@ -19,7 +19,7 @@
 
 ## 2、自勉
 
-此为本人书法练习历程： [书法练习轨迹--明月几时有]( https://xushufa.cn/%E8%BD%A8%E8%BF%B9/%E4%B9%A6%E6%B3%95%E7%BB%83%E4%B9%A0%E8%BD%A8%E8%BF%B9--%E6%98%8E%E6%9C%88%E5%87%A0%E6%97%B6%E6%9C%89-%E6%97%A0%E5%9B%BE%E7%89%88.html )。记录每周练字情况、字帖照片及一些感想。之所以记录下来，主要是以下几点原因：  <br/>
+此为本人书法练习历程： [书法练习轨迹--明月几时有]( https://xushufa.cn )。记录每周练字情况、字帖照片及一些感想。之所以记录下来，主要是以下几点原因：  <br/>
 一、是要把所写的字，由丑到美，由差到好的过程保存下来，方便对照。不想练的时候，觉得没有进步的时候，看看以前的丑字又会给自己无穷的动力：原来自己进步蛮大，天天练习还是有意义的。 <br/>
 二、是寻找志同道合者，对书法有兴趣的可以联系本人，相互交流，共同进步，所谓他山之石，可以攻玉。同时也希望书法大师不吝赐教，光临指导。 <br/>
 三、炫耀+装逼，引流+宣传。毕竟人生在世，名利二字。当然肯定是一年半载甚至三年五载，小有所成之后才能晒图，发朋友圈，示字与人。 <br/>
