--- a/docs/书法/轨迹/诗词杂句.md
+++ b/docs/书法/轨迹/诗词杂句.md
@@ -254,7 +254,7 @@
 君子不器，学且与思，知行合一。<br/>
 温故知新，记而不作，未来已来。<br/>
 
-以[无为徐生]( https://xushufa.cn/%E7%BB%83%E4%B9%A0/%E6%97%A0%E4%B8%BA%E5%BE%90%E7%94%9F.html )之名作[书法练习轨迹]( https://xushufa.cn/%E8%BD%A8%E8%BF%B9/%E4%B9%A6%E6%B3%95%E7%BB%83%E4%B9%A0%E8%BD%A8%E8%BF%B9--%E6%98%8E%E6%9C%88%E5%87%A0%E6%97%B6%E6%9C%89-%E6%97%A0%E5%9B%BE%E7%89%88.html )成[徐书法]( https://xushufa.cn/%E7%BB%83%E4%B9%A0/%E5%BE%90%E4%B9%A6%E6%B3%95.html )。 <br/>
+以[无为徐生]( https://xushufa.cn/docs/shu-fa/lian-xi/wu-wei-xu-sheng.html )之名作[书法练习轨迹]( https://xushufa.cn/docs/shu-fa/lian-xi/shu-fa-lian-xi-gui-ji-readme.html )成[徐书法]( https://xushufa.cn/docs/shu-fa/lian-xi/xu-shu-fa.html )。 <br/>
 做人如果没有梦想，那跟咸鱼有什么区别。 <br/>
 
 
