--- a/docs/关于我.md
+++ b/docs/关于我.md
@@ -35,7 +35,7 @@
 
 起初&ensp;对书法有兴趣 <br/>
 开始练字&ensp;找个地方记录练习历程 <br/>
-左思右想&ensp;`项目`取名叫做《[书法练习轨迹]( https://vuepress-calligraphy.xushufa.cn/%E7%BB%83%E4%B9%A0/%E4%B9%A6%E6%B3%95%E7%BB%83%E4%B9%A0%E8%BD%A8%E8%BF%B9ReadMe.html )》 <br/>
+左思右想&ensp;`项目`取名叫做《[书法练习轨迹]( https://xuyq123.gitlab.io/mkdocs-blog/%E4%B9%A6%E6%B3%95/%E7%BB%83%E4%B9%A0/%E4%B9%A6%E6%B3%95%E7%BB%83%E4%B9%A0%E8%BD%A8%E8%BF%B9ReadMe/ )》 <br/>
 
 后来&ensp;内容变多  <br/>
 倾诉欲更强&ensp;注册了公众号 <br/>
@@ -43,7 +43,7 @@
 
 现在&ensp;记录已成习惯  <br/>
 于是注册域名&ensp;自建`网站`  <br/>
-两者集合&ensp;创造了《[徐书法]( https://reco-blog.xushufa.cn/docs/shu-fa/lian-xi/xu-shu-fa.html )》 <br/>
+两者集合&ensp;创造了《[徐书法]( https://xushufa.cn/docs/shu-fa/lian-xi/xu-shu-fa.html )》 <br/>
 
 ---
 
@@ -67,9 +67,9 @@
 
 | 徐书法 | 地址        |  备注          |
 | -----  | ----------- |  ------------- |
-| 1      | [xushufa]( https://xuyq123.gitlab.io/mkdocs-blog )   | `mkdocs`构建的博客网站。             |
-| 2      | [vuepress-blog]( https://vuepress-blog.xushufa.cn )  | `vuepress`构建的博客网站。           |
-| 3      | [reco-blog]( https://reco-blog.xushufa.cn )          | `vuepress-theme-reco`构建的博客网站。|
+| 1      | [xushufa]( https://xushufa.cn )                  	    | `vuepress-theme-reco`构建的博客网站。|
+| 2      | [vuepress-blog]( https://vuepress-blog.xushufa.cn )  	| `vuepress`构建的博客网站。           |
+| 3      | [mkdocs-blog]( https://xuyq123.gitlab.io/mkdocs-blog )   | `mkdocs`构建的博客网站。             |
 
 ---
 
