--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -10,7 +10,7 @@
 之前只玩过功能比较简单、内容相对单一的游戏，像qq农场、部落冲突、天天酷跑、和平精英等等。<br/>
 世界规模如此巨大，内容剧情如此精彩，画面色彩如此绚丽的游戏还是首次接触。<br/>
 想不到一接触就入迷了，一入迷难以自拔，故此记录，以作[旅行]( https://gitcode.net/xu180/document/-/blob/master/article/%E9%9A%8F%E7%AC%94/%E6%88%91%E7%9A%84%E5%8E%9F%E7%A5%9E%E6%97%85%E8%A1%8C%E8%A7%82%E6%B5%8B%E8%AE%B0%E5%BD%95.md )感想。<br/>
-原神UID：254901679，欢迎加好友。文档记录于个人[网站]( https://web.xushufa.cn )，欢迎浏览。<br/>
+原神UID：254901679，欢迎加好友。文档记录于个人[网站]( https://xushufa.cn )，欢迎浏览。<br/>
 --20221124
 
 
