--- a/docs/生活/随笔/驾考记事.md
+++ b/docs/生活/随笔/驾考记事.md
@@ -4,7 +4,7 @@
 
 > 2018合肥安农大驾校考驾照记事
 
-> 2022首发于我的博客[blog.xushufa.cn]( https://blog.xushufa.cn )
+> 2022首发于我的博客[xushufa.cn]( https://xushufa.cn )
 
 ---
 
