--- a/docs/生活/随笔/吉他练习笔记.md
+++ b/docs/生活/随笔/吉他练习笔记.md
@@ -29,7 +29,7 @@ https://www.toutiao.com/article/6566441262684045828/?channel=&source=search_tab
 
 ### 2.1 第一节课
 
-> 第一节课  认识吉他、坐姿、弹弦、节奏  
+> 第一节课  认识吉他、坐姿、弹弦、节奏。   
 
 - 构成 <br/>
 琴头，琴颈，琴身 <br/>
@@ -50,6 +50,8 @@ https://www.toutiao.com/article/6566441262684045828/?channel=&source=search_tab
 **632123** 532123 **432123** <br/>
 **6323** 5323 **5323** 5323 **4323** 5323 <br/>
 
+- [ ] 学于 20230527 周六
+
 --- 
 
 > 感想与笔记
@@ -65,6 +67,49 @@ https://www.toutiao.com/article/6566441262684045828/?channel=&source=search_tab
 关键在于坚持，保持兴趣，随心而为，尽力而行。 <br/>
 --20230529 <br/>
 
+---
 
+### 2.2 第二节课
+
+> 第二节课   爬格子 训练手指拉伸度，力度，灵活度。
+
+- 变调夹，夹住吉他的第五品，靠近品线，不能压到品线。  <br/>
+
+- 左手不能留指甲，大拇指正面顶住琴脊。 <br/>
+大拇指可以上下左右移动。
+
+- **爬格子**，指尖按住琴弦，垂直纸板，按在格子里面。  <br/>
+靠近品线，不能按到品线，用力按下去。
+
+- 食指按第一品第一弦，变调夹的品，即原第六品。  <br/>
+中指按第二品第二弦。  <br/>
+无名指按第三品。 <br/>
+小拇指按第四品。  <br/>
+
+- 花费大量的时间，慢速度练习。 <br/>
+初学者，每天一小时，练习二十天，就不会有沉闷的声音。爬格子这一关过了就成功了百分之八十。
+
+- [ ] 学于 20230604 周日
+
+---
+
+> 感想与笔记
+
+- 爬格子有点找罪受挨酷刑的感觉，按一会儿，指尖就很疼。果然，高手大师不是那么轻易就能达到的。 <br/>
+- 宝剑锋从磨砺出，梅花香自苦寒来。吉他不易，且行且努力 <br/>
+- 没有捷径，只有方法。没有借口，只有练习。爬格子比较难。四个手指按住琴弦不容易。按住之后弹出响亮的琴音很难，切换琴弦流畅的变化旋律更难。需要在网上多找找爬格子的视频，学习正确的科学的有效的方法。但是关键在于每日练习。 <br/>
+--20230605 <br/>
+
+
+- 现在基本是忙里偷闲早晚十分钟爬格子。果然每日练习时长短了，虽然已过二十多天，但是目前爬格子还是比较生疏。
+- 只能把吉他当做兴趣爱好，有空了，想到了就练练。尽量做到每日练习，不荒废，不放弃。
+- 总结一下为什么不能长久坚持的原因：  <br/>
+1、爬格子太疼，不想受酷刑。而且因为是程序员需要敲键盘，不能因为弹吉他手疼影响工作。（是借口也是正当理由。）  <br/>
+2、没有同道师友，个人练习随心所欲信马由缰。想练就练，想不练就不练。无所谓，谁会对上谁。  <br/>
+3、没有目标或者说是虽然树立了目标但是由于内因外因没有达成。  <br/>
+4、练吉他只是爱好，不是吃饭的工具，没有紧张感紧迫感。  <br/>
+5、人生苦短，良辰美景不可辜负。  <br/>
+6、懒，没有毅力。  <br/>
+--20230628 <br/>
 
 
