--- a/docs/书法/书法/文徵明小楷《千字文》.md
+++ b/docs/书法/书法/文徵明小楷《千字文》.md
@@ -11,13 +11,13 @@
 ## 天地玄黄
 
 
-![Image_001]( https://md.xushufa.cn/gitimg/document/imgs/shufa/文徵明-小楷千字文/Image_001.png )
+![Image_001]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/shufa/文徵明-小楷千字文/Image_001.png )
 
 
-![Image_002]( https://md.xushufa.cn/gitimg/document/imgs/shufa/文徵明-小楷千字文/Image_002.png )
+![Image_002]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/shufa/文徵明-小楷千字文/Image_002.png )
 
 
-![Image_003]( https://md.xushufa.cn/gitimg/document/imgs/shufa/文徵明-小楷千字文/Image_003.png )
+![Image_003]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/shufa/文徵明-小楷千字文/Image_003.png )
 
 ---
 
