--- a/docs/生活/文档/安徽电信免费流量获取方法.md
+++ b/docs/生活/文档/安徽电信免费流量获取方法.md
@@ -16,19 +16,19 @@
 
 ## 1、安徽掌上10000 APP  签到、摇一摇赢福袋
 
-![11]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic/11.jpg )
+![11]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic/11.jpg )
 
 ---
 
-![12]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic/12.jpg )
+![12]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic/12.jpg )
 
 ---
 
-![13]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic/13.jpg )
+![13]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic/13.jpg )
 
 ---
 
-![14]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic/14.jpg )
+![14]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic/14.jpg )
 
 ---
 
@@ -40,19 +40,19 @@
 
 ## 2、微信公众号-安徽电信 签到、抽奖
 
-![21]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic/21.jpg )
+![21]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic/21.jpg )
 
 ---
 
-![22]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic/22.jpg )
+![22]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic/22.jpg )
 
 ---
 
-![23]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic/23.jpg )
+![23]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic/23.jpg )
 
 ---
 
-![24]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic/24.jpg )
+![24]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic/24.jpg )
 
 ---
 
@@ -64,19 +64,19 @@
 
 ## 3、微信小程序-流量来啦 签到、拆福包
 
-![31]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic/31.jpg )
+![31]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic/31.jpg )
 
 ---
 
-![32]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic/32.jpg )
+![32]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic/32.jpg )
 
 ---
 
-![33]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic/33.jpg )
+![33]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic/33.jpg )
 
 ---
 
-![34]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic/34.jpg )
+![34]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic/34.jpg )
 
 ---
 
@@ -91,7 +91,7 @@
 [中国电信-福利嘉年华]( https://open.weixin.qq.com/connect/oauth2/authorize?appid=ww094e9c4b139f3b6e&redirect_uri=http%253A%252F%252Fwx2020.gstai.com%252Fahqy_gzh_yyl_v2%252Fcustomer%252Fshare.php%253Fu%253D%2526o%253DoE8I-wMgjIpHKAR5lGvreOd3o2pU%2526p%253D%2526co%253DoE8I-wMgjIpHKAR5lGvreOd3o2pU%2526cu%253DwmYUBdCQAAK5XsxsIimorizvgBXG5hHQ%2526st%253D2%2526code%253DFCa-cBvkYEIEmbKdx5Gj7oc1pMYmtzczhsnVwJoioF8%2526state%253Dah_qy&response_type=code&scope=snsapi_base&state=ah_qy#wechat_redirect ) ：只能在微信中打开
 
 
-![41]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic/41.jpg )
+![41]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic/41.jpg )
 
 ---
 
@@ -105,11 +105,11 @@
 
 > 安徽掌上10000 APP
 
-![51]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic/51.jpg )
+![51]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic/51.jpg )
 
 ---
 
-![52]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic/52.jpg )
+![52]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic/52.jpg )
 
 ---
 
@@ -121,11 +121,11 @@
 
 ## 附录
 
-若想分享电信流量福袋福包及交流关于流量问题可加入本群：[流量群]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic/wxgGroup.jpg )。
+若想分享电信流量福袋福包及交流关于流量问题可加入本群：[流量群]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic/wxgGroup.jpg )。
 
 若邀请过期或者有更多问题，可关注本人公众号，微信搜索【无为徐生】或扫描下方二维码。
 回复【安徽电信群】即可获取最新入群二维码。
-![无为徐生]( https://md.xushufa.cn/gitimg/document/imgs/weixin/wuweixusheng.png )
+![无为徐生]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/weixin/wuweixusheng.png )
 
 
 
