--- a/docs/生活/随笔/驾考记事.md
+++ b/docs/生活/随笔/驾考记事.md
@@ -393,8 +393,8 @@
 - 停车时，踩离合踩刹车，挂空挡，拉手刹，解安全带，下车。
 
 
-![img1]( https://md.xushufa.cn/gitimg/document/imgs/jiazhao/jiazhao_20180602001.png )
-![img2]( https://md.xushufa.cn/gitimg/document/imgs/jiazhao/jiazhao_20180602002.png )
+![img1]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/jiazhao/jiazhao_20180602001.png )
+![img2]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/jiazhao/jiazhao_20180602002.png )
 
 ---
 
@@ -416,7 +416,7 @@
 - 6、车子与库平行时，方向盘左转一圈。
 - 7、左视镜下边沿过库边线，停车。踩离合，踩刹车，挂空挡，拉手刹。开安全带。下车。
 
-![img3]( https://md.xushufa.cn/gitimg/document/imgs/jiazhao/jiazhao_20180607001.png )
+![img3]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/jiazhao/jiazhao_20180607001.png )
 
 ---
 
