--- a/docs/生活/随笔/吉他练习笔记.md
+++ b/docs/生活/随笔/吉他练习笔记.md
@@ -101,3 +101,15 @@ https://www.toutiao.com/article/6566441262684045828/?channel=&source=search_tab
 --20230605 <br/>
 
 
+- 现在基本是忙里偷闲早晚十分钟爬格子。果然每日练习时长短了，虽然已过二十多天，但是目前爬格子还是比较生疏。
+- 只能把吉他当做兴趣爱好，有空了，想到了就练练。尽量做到每日练习，不荒废，不放弃。
+- 总结一下为什么不能长久坚持的原因：  <br/>
+1、爬格子太疼，不想受酷刑。而且因为是程序员需要敲键盘，不能因为弹吉他手疼影响工作。（是借口也是正当理由。）  <br/>
+2、没有同道师友，个人练习随心所欲信马由缰。想练就练，想不练就不练。无所谓，谁会对上谁。  <br/>
+3、没有目标或者说是虽然树立了目标但是由于内因外因没有达成。  <br/>
+4、练吉他只是爱好，不是吃饭的工具，没有紧张感紧迫感。  <br/>
+5、人生苦短，良辰美景不可辜负。  <br/>
+6、懒，没有毅力。  <br/>
+--20230628 <br/>
+
+
