--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -157,7 +157,6 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 小保底90抽之前歪了提纳里，大保底90抽没问题了。抽到雷神的话，看看能否有行秋，和班尼特香菱组成雷神国家队。 <br/>
 --20221219
 
-
 ---
 
 <br/>
@@ -180,7 +179,6 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 雷琴香班这样的配置只能说有点意思，强度上面基本没有提升。 <br/>
 在大世界雷班两个足以横行，打深渊的话就要强度伤害值，需要雷神国家或者雷九万班。 <br/>
 --20221229
-
 
 ---
 
@@ -248,6 +246,39 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 
 <br/>
 
+半年过去了，上次记录是3.4版本，2023年1月18日开始，一直到2023年3月1日结束，共42天。<br/>
+这次是3.8将要更新，于2023-07-05开启，上半优菈、可莉，下半心海、散兵，陪跑四星是：米卡、雷泽、托马。<br/>
+这半年以来，依然沉浸在提瓦特世界，每天签到、做委托、合成体力、刷圣遗物、打周本、找神瞳、开宝箱、捡材料、做任务。有时跑跑地图，打打深渊。<br/>
+目前也抽到了一些新角色：纳西妲、迪希雅、莫娜、瑶瑶、万叶等等。<br/>
+这段时间终于为原神花钱了，充了三次小月卡一次大月卡。昨天（20230704）是3.7最后一天，为了抽万叶氪金几个首充双倍，花了几百。<br/>
+现在有41个角色，其中有六个五星up：雷电将军、胡桃、夜兰、纳西妲、艾尔海森、枫原万叶，四个五星常驻：提纳里、琴、迪希雅、莫娜。<br/>
+基本能组成三支队伍：胡夜莱莫（胡桃 夜兰 莱依拉 莫娜），雷神国家队（雷电将军 班尼特 行秋 香菱）、草神国家队（纳西妲 久岐忍 行秋）。万叶、艾尔海森按需配队。<br/>
+从去年十一月份开始玩原神到现在有大半年了，二百四十多天，平生三十多年第一次如此沉迷一款游戏。画面、音乐、活动、内容，相当优秀，相当好玩。人物、战斗、元素、配队，确实精彩，确实有趣。<br/>
+本人之前基本不怎么玩游戏，更别说充钱氪金。但是进入提瓦特三个月之后充了月卡，更为了抽到万叶使用蓝绿修改器（微信支付宝）。真是想不到啊。<br/>
+
+<br/>
+
+基于这两百多天的游戏时间有一些感想：<br/>
+大概一两月就会熟悉提瓦特，这个时候是最有趣最好玩的阶段，一切都是新鲜的。<br/>
+但是大概三四个月之后，任务做的差不多了，风景也看腻了。天天重复做委托也会有点厌烦。<br/>
+原石、宝箱少了，神瞳也难找了，世界没那么有趣了，后面可能会慢慢长草，不想玩了。<br/>
+只有新版本新活动会有点意思，但是也有点千篇一律。<br/>
+
+要保持激情与乐趣，只有养新角色以及打深渊。这是两件事情但也合二为一。<br/>
+新角色是未体验过了，需要养成，必须刷材料和圣遗物。<br/>
+圣遗物能用或者毕业之后带着角色游历提瓦特，但是依旧是那些景色，有点无聊。<br/>
+那就只有打深渊了，每半个月更新一次深渊，有新怪物新挑战，以及新乐趣。<br/>
+所以如果长久驻扎提瓦特的话，如果不是土豪，一定要规划好抽卡策略。最好抽那些人权角色，如七神（风神温迪 岩神钟离 雷神雷电将军 草神纳西妲）、夜天后（夜兰）、叶天帝（枫原万叶）等等。 当然如果很喜欢某个角色，像可莉、迪希雅、琴、七七、迪卢克等等，悉心呵护，好好培养，依然可以横行世界扫荡深渊。<br/>
+游戏有乐趣，生活更有乐趣。<br/>
+抵制不良游戏，拒绝盗版游戏。<br/>
+注意自我保护，警防上当受骗。<br/>
+适度游戏益脑，沉迷游戏伤身。<br/>
+合理安排时间，享受健康生活。<br/>
+
+--20230705
+
+<br/>
+
 
 ### 2.2、感想
 
@@ -290,7 +321,6 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 挑战深渊，追求极限。不疾不徐，缓步前行。<br/>
 旅行世界，探索解密。云起云落，心平气和。<br/>
 --20230213
-
 
 ---
 
@@ -390,7 +420,6 @@ ESC-打开派蒙界面                    <br/>
 Enter-聊天页面                      <br/>
 Ctrl-切换走路/跑步状态              <br/>
 
-
 ---
 
 <br/>
@@ -463,12 +492,12 @@ Ctrl-切换走路/跑步状态              <br/>
 雷神大毕业状态**专武命座**伤害提升比较巨大，测算数据来自于[原神伤害计算]( https://genshin-calc.sirokuma.cc/ ) 。<br/>
 以下是雷电将军满级大毕业，天赋10、等级90、暴击60、暴伤170、充能270的暴击伤害：  <br/>
 
-| 等级 |  武器  	 |  命座  |  暴击伤害 |  提升比例       | 
+| 等级 |  武器  	 |  命座  |  暴击伤害 |  提升比例       |
 | ---  | ----------- |  ----  | --------- |  -------------- |
-| 90   |  [鱼获]( https://bbs.mihoyo.com/ys/obc/content/2604/detail )  	 |  0	  |  20103    |  --             |  
-| 90   |  鱼获  	 |  2	  |  28718	  |  +8615（43%）   |  
-| 90   |  [薙草之稻光]( https://bbs.mihoyo.com/ys/obc/content/2602/detail ) |  0	  |  30133	  |  +10030（50%）  |  
-| 90   |  薙草之稻光 |  2	  |  43047	  |  +22944（141%） |  
+| 90   |  [鱼获]( https://bbs.mihoyo.com/ys/obc/content/2604/detail )  	 |  0	  |  20103    |  --             |
+| 90   |  鱼获  	 |  2	  |  28718	  |  +8615（43%）   |
+| 90   |  [薙草之稻光]( https://bbs.mihoyo.com/ys/obc/content/2602/detail ) |  0	  |  30133	  |  +10030（50%）  |
+| 90   |  薙草之稻光 |  2	  |  43047	  |  +22944（141%） |
 
 
 综上雷神专武命座对伤害提升显著：专武提升50%；专武加命座简直起飞了，可提升141%。 <br/>
@@ -489,20 +518,19 @@ Ctrl-切换走路/跑步状态              <br/>
 原神四神：蒙德风神温迪，璃月岩神钟离，稻妻雷神雷电将军，须弥草神纳西妲。<br/>
 草神 种门 草原核yyds，超绽放，烈绽放，元素精通，速成配队。 <br/>
 
-| 队伍     | 角色        | 
-| -------- | ----------- |
-| 雷九万班 |  雷电将军、枫原万叶、班尼特、九条裟罗  |
-| 神鹤万心 |  绫华、申鹤、心海、万叶 	            |
-| 神甘万心 |  绫华、甘雨、心海、万叶 	            |
-| 胡行钟夜 |  胡桃、行秋、钟离、夜兰	            |
-| 万达国际 |  万叶、公子、班尼特、香菱	            |
-| 宵夜钟云 |  宵宮、夜兰、钟离、云堇                |
-| 雷神国家 |  雷神、行秋、班尼特、香菱	            |
-| 妮露绽放 |  妮露+心海+**纳西妲**+草主  	        |
-| 提八妲钟 |  提纳里+八重神子+纳西妲+钟离           |
-| 玉皇妲帝 |  刻晴+皇女+纳西妲+钟离 	            |
-| 刻晴激化 |  刻晴+钟离+纳西妲+皇女 	            |
-| 久草绽放 |  久岐忍+行秋+纳西妲+芭芭拉	            |
+| 队伍     | 角色        | 说明       |
+| -------- | ----------- | ----------- |
+| 雷九万班 |  雷电将军、枫原万叶、班尼特、九条裟罗  | 刚需六命九条。零命雷神可用，二命更好。 |
+| 神鹤万心 |  绫华、申鹤、心海、万叶 	            | 神甘万心也可，甘雨代替申鹤。 |
+| 胡行钟夜 |  胡桃、行秋、钟离、夜兰	            | 双水：胡行钟莫（莫娜）。双岩：胡行钟阿（阿贝多）。 |
+| 万达国际 |  万叶、公子、班尼特、香菱	            |  |
+| 宵夜钟云 |  宵宮、夜兰、钟离、云堇                |  |
+| 雷神国家 |  雷神、行秋、班尼特、香菱	            |  性价比最高，一金即可。一命班尼特完全体，四命香菱延长旋火轮时间。 |
+| 妮露绽放 |  妮露+心海+**纳西妲**+草主  	        |  |
+| 提八妲钟 |  提纳里+八重神子+纳西妲+钟离           |  |
+| 玉皇妲帝 |  刻晴+皇女+纳西妲+钟离 	            |  |
+| 刻晴激化 |  刻晴+钟离+纳西妲+皇女 	            |  |
+| 久草绽放 |  久岐忍+行秋+纳西妲	                |  第四位比较灵活，生存位：北斗；攻击位：艾尔海森。|
 
 
 <br/>
@@ -531,10 +559,10 @@ Ctrl-切换走路/跑步状态              <br/>
 
 
 <br/>
-  
+
 > 圣遗物副词条每次强化值
 
-| 属性     | 每次强化值 |        |       |      | 
+| 属性     | 每次强化值 |        |       |      |
 | -------- | ----------- |  ----  | ---- |  ---- |
 | 暴击率   |  2.7%  	 |  3.1%  | 3.5% | 3.9%  |
 | 暴伤     |  5.4%  	 |  6.2%  | 7.0% | 7.8%  |
@@ -574,7 +602,7 @@ Ctrl-切换走路/跑步状态              <br/>
 教导(绿色天赋书)×9 + 指引(蓝色天赋书)×63 + 哲学(紫色天赋书)×114 <br/>
 
 <br/>
- 
+
 ---
 
  <table width="576" border="0" cellpadding="0" cellspacing="0">
@@ -686,7 +714,7 @@ Ctrl-切换走路/跑步状态              <br/>
    </tr>
   </table>
   
-  
+
 <br/>
 
 ---
@@ -762,7 +790,7 @@ Ctrl-切换走路/跑步状态              <br/>
    <![endif]>
   </table>
 
-  
+
 <br/>
 
 ---
@@ -835,9 +863,9 @@ Ctrl-切换走路/跑步状态              <br/>
    </tr>
   </table>
 
-  
+
 <br/>
- 
+
 ---
 
 <table>
@@ -895,9 +923,9 @@ Ctrl-切换走路/跑步状态              <br/>
 
 
 <br/>
- 
+
 ---
-  
+
 <table>
    <col width="72" span="5" />
    <tr>
@@ -957,7 +985,7 @@ Ctrl-切换走路/跑步状态              <br/>
 <br/>
 
 ---
- 
+
 <br/>
 
 
@@ -972,7 +1000,7 @@ Ctrl-切换走路/跑步状态              <br/>
 
 来自 https://bbs.mihoyo.com/ys/article/30600790
 
-```mermaid
+<mermaid>
 graph TD
 雷 --> | 感电 | 水;
 雷 --> | 超载 | 火;
@@ -992,11 +1020,11 @@ graph TD
 冰 --> | 超导 | 雷;
 冰 --> | 冻结 | 水;
 
-```
+</mermaid>
 
 ---
 
-```mermaid
+<mermaid>
 graph LR
 元素反应 --> A1[增幅]
 元素反应 --> B1[剧变]
@@ -1035,7 +1063,7 @@ D11--> D121[草水]
 D12--> D122[草水雷]
 D13--> D123[草水火]
 
-```
+</mermaid>
 
 - 三种元素，超绽放烈绽放伤害最高。
 
@@ -1048,7 +1076,7 @@ D13--> D123[草水火]
 来自 https://bbs.mihoyo.com/ys/article/2050152
 
 
-```mermaid
+<mermaid>
 graph LR
 元素反应 --> A1[增伤类]
 元素反应 --> B1[额外伤害类]
@@ -1083,15 +1111,14 @@ C121--> C1211[结晶盾承受量仅与等级及元素精通有关]
 D11--> D121[水草]
 D12--> D122[水冰]
 
-```
+</mermaid>
 
 - 元素反应的伤害均与**触发角色**的**元素精通**有着密切的联系。
 - 两种元素，超载的群体伤害最高，感电的单体伤害最高。
 
-
 ---
 
 ---
 
-[^流程图]: 使用mermaid绘制流程图，但常用平台是三个单引号格式，vuepress项目是箭头格式。
+[^流程图]: 使用mermaid绘制流程图，但常用平台是三个单引号格式 。vuepress项目是箭头格式：头 <mermaid>  尾 </mermaid> 。
 
