--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -1,7 +1,10 @@
 # 我的原神旅行观测记录
 
+<br/>
 
-## 1、说明
+> 提瓦特旅行笔记
+
+## 1、笔记
 
 ### 1.1、介绍
 
@@ -13,7 +16,15 @@
 原神UID：254901679，欢迎加好友。文档记录于个人[网站]( https://xushufa.cn )，欢迎浏览。<br/>
 --20221124
 
+<br/>
 
+原神 旅行者 [米游社]( https://bbs.mihoyo.com/ys/ )
+
+提瓦特 蒙德 璃月 层岩巨渊 稻妻 须弥
+
+班尼特 芭芭拉 丽莎 香菱 安柏 凯亚 凝光 提纳里 雷电将军
+
+<br/>
 
 ### 1.2、网站
 
@@ -29,21 +40,10 @@
 | 8      | [原神贴吧]( https://tieba.baidu.com/f?kw=%E5%8E%9F%E7%A5%9E )              | https://tieba.baidu.com/f?kw=%E5%8E%9F%E7%A5%9E            | 论坛 |
 
 
-
-<br/>
-
-## 2、旅行笔记
-
-原神 旅行者 [米游社]( https://bbs.mihoyo.com/ys/ )
-
-提瓦特 蒙德 璃月 层岩巨渊 稻妻 须弥
-
-班尼特 芭芭拉 丽莎 香菱 安柏 凯亚 凝光 提纳里 雷电将军
-
 <br/>
 
 
-### 2.1、日志
+### 1.3、日志
 
 > 新手菜鸟萌新注意点
 
@@ -279,8 +279,29 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 
 <br/>
 
+**深渊3.7及3.8怪物**：<br/>
+12-1 上半：冰霜骗骗花、炽热骗骗花；元能构装体。 <br/>
+12-1 下半：水深渊法师、冰深渊法师；深渊使徒·激流、深渊使徒·霜落。 <br/>
+12-2 上半：翠翎恐蕈。 <br/>
+12-2 下半：雷音权现。 <br/>
+12-3 上半：圣骸角鳄。(水)、圣骸牙兽(草)。 <br/>
+12-3 下半：深罪浸礼者·水火冰驱役者。 <br/>
 
-### 2.2、感想
+这几期深渊骗骗花、圣骸兽及深渊法师横行，没有绫华冷冻队不太方便打怪。但是万叶是刚需，尤其是对付骗骗花。<br/>
+查询提瓦特小助手：上半使用率最高的队伍是神鹤万心-绫华申鹤万叶心海，使用率一骑绝尘高达58.7%。下半使用率最高的是草神国家队-纳西妲班尼特行秋香菱，使用率27.5%。<br/>
+但是目前有些角色我是没有的，根据box里面的角色匹配。上半雷夜万班-雷电将军夜兰万叶班尼特，下半纳行久香-草神行秋久岐忍香菱。上半对付骗骗花圣骸兽主要使用万叶聚怪增伤，下半对付深渊法师及使徒上场草神香菱破盾。<br/>
+
+<br/>
+
+热情是一时的，孤独是长久的。<br/>
+我的人生信条：制衡强变真，克制、平衡、坚强、变化、真实。<br/>
+玩原神依旧如此。<br/>
+
+--20230710
+
+<br/>
+
+### 1.4、感想
 
 
 原神是相对**单机**的游戏，喜欢哪个人物就升级哪个。但是探索世界的时候要打得过boss。 <br/>
@@ -324,67 +345,8 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 
 ---
 
-<br/>
 
-
-### 2.3、拾遗
-
-雷神国家队就缺少行秋了，要开始攒材料。 <br/>
-
-[行秋]( https://bbs.mihoyo.com/ys/obc/content/241/detail )  少年春衫薄<br/>
-
-lv1-90等级突破材料需要： <br/>
-涤净青金碎屑×1、涤净青金断片×9、涤净青金块×9、涤净青金×6；净水之心×46；霓裳花×168；<br/>
-破损的面具×18、污秽的面具×30、不祥的面具×36；摩拉×2092530、大英雄经验419。 <br/>
-
-单个天赋升级材料需要： <br/>
-3本黄金的教导，21本黄金的指引，38本黄金的哲学，周三、周六、周日从秘境太山府获取。 <br/>
-6个破损的面具，22个污秽的面具，31个不祥的面具，6个北风狼掉落物北风之尾，1个智慧之冕和1652500摩拉。<br/>
---20230103
-
----
-
-原神3.4下半卡池有夜兰，屯原石，攒材料。 <br/>
-
-[夜兰]( https://bbs.mihoyo.com/ys/obc/content/4081/detail )  兰生幽谷 <br/>
-
-lv1-90等级突破材料： <br/>
-涤净青金碎屑x1、涤净青金断片x9、涤净青金块x9、涤净青金x9、符纹之齿x46、星螺x168；  <br/>
-新兵的徽记x18、士官的徽记x30、尉官的徽记x36；摩拉×2092530、大英雄经验419。 <br/>
-
-单个天赋升级材料： <br/>
-繁荣的教导x3+繁荣的指引x21+繁荣的哲学x38，周一、周四、周日从秘境太山府获取。 <br/>
-新兵的徽记x6+士官的徽记x22+尉官的徽记x31+鎏金之鳞x6+1个皇冠+165万摩拉。 <br/>
-
-
-涤净青金需要打败**纯水精灵**或者无相之水获得。 <br/>
-符纹之齿需要在璃月层岩巨渊地下矿区击败**遗迹巨蛇**获得。 <br/>
-鎏金之鳞需要打**若陀龙王**周本获得，也可以通过异梦溶媒转化获得。 <br/>
---20230111
-
-<br/>
-
-原神3.4版本海灯节开启时间：2023年1月20日，选择行秋。祈愿大保底夜兰。 <br/>
-
-<br/>
-
----
-
-[钟离]( https://bbs.mihoyo.com/ys/obc/content/1290/detail ) 璃月岩神 <br/>
-
-lv1-90等级突破材料： <br/>
-玄岩之塔46个，石珀168个，坚牢黄玉碎屑1个，坚牢黄玉断片9个，坚牢黄玉块9个，坚牢黄玉6个， <br/>
-史莱姆凝液18个，史莱姆清30个，史莱姆原浆36个，2092530摩拉，大英雄经验419。 <br/>
-	
-单个天赋升级材料： <br/>
-黄金的教导x3、黄金的指引x21、黄金的哲学x38、史莱姆凝液x6、史莱姆清x22、史莱姆原浆x31、 <br/>
-智识之冕x1、**吞天之鲸·只角**x6、165万摩拉。 <br/>
-
-<br/>
-
----
-
-### 2.4、快捷键
+### 1.5、快捷键
 
 > 原神电脑端操作快捷键
 
@@ -425,10 +387,10 @@ Ctrl-切换走路/跑步状态              <br/>
 <br/>
 
 
-## 3、观测枢
+## 2、观测枢
 
 
-### 3.1、雷神
+### 2.1、雷神
 
 [雷电将军]( https://bbs.mihoyo.com/ys/obc/content/2404/detail )  梦想一心  快到碗里来 <br/>
 雷电将军，5星雷系长柄武器角色。其名为「雷电影」，魔神名讳为「巴尔泽布」，雷电将军只是称谓。前任雷电将军「雷电真」·巴尔与现任雷电将军「雷电影」·巴尔泽布是双生魔神，「真」在数百年前的战争中逝世，「影」便来到了幕前。许诺稻妻臣民“千世万代不变不移的永恒”，然而自己却在「永恒」里迷失··· <br/>
@@ -512,7 +474,98 @@ Ctrl-切换走路/跑步状态              <br/>
 
 <br/>
 
-### 3.2、配队
+
+<br/>
+
+
+### 2.2、升级
+
+雷神国家队就缺少行秋了，要开始攒材料。 <br/>
+
+[行秋]( https://bbs.mihoyo.com/ys/obc/content/241/detail )  少年春衫薄<br/>
+
+lv1-90等级突破材料需要： <br/>
+涤净青金碎屑×1、涤净青金断片×9、涤净青金块×9、涤净青金×6；净水之心×46；霓裳花×168；<br/>
+破损的面具×18、污秽的面具×30、不祥的面具×36；摩拉×2092530、大英雄经验419。 <br/>
+
+单个天赋升级材料需要： <br/>
+3本黄金的教导，21本黄金的指引，38本黄金的哲学，周三、周六、周日从秘境太山府获取。 <br/>
+6个破损的面具，22个污秽的面具，31个不祥的面具，6个北风狼掉落物北风之尾，1个智慧之冕和1652500摩拉。<br/>
+--20230103
+
+---
+
+原神3.4下半卡池有夜兰，屯原石，攒材料。 <br/>
+
+[夜兰]( https://bbs.mihoyo.com/ys/obc/content/4081/detail )  兰生幽谷 <br/>
+
+lv1-90等级突破材料： <br/>
+涤净青金碎屑x1、涤净青金断片x9、涤净青金块x9、涤净青金x9、符纹之齿x46、星螺x168；  <br/>
+新兵的徽记x18、士官的徽记x30、尉官的徽记x36；摩拉×2092530、大英雄经验419。 <br/>
+
+单个天赋升级材料： <br/>
+繁荣的教导x3+繁荣的指引x21+繁荣的哲学x38，周一、周四、周日从秘境太山府获取。 <br/>
+新兵的徽记x6+士官的徽记x22+尉官的徽记x31+鎏金之鳞x6+1个皇冠+165万摩拉。 <br/>
+
+
+涤净青金需要打败**纯水精灵**或者无相之水获得。 <br/>
+符纹之齿需要在璃月层岩巨渊地下矿区击败**遗迹巨蛇**获得。 <br/>
+鎏金之鳞需要打**若陀龙王**周本获得，也可以通过异梦溶媒转化获得。 <br/>
+--20230111
+
+<br/>
+
+原神3.4版本海灯节开启时间：2023年1月20日，选择行秋。祈愿大保底夜兰。 <br/>
+
+<br/>
+
+---
+
+[钟离]( https://bbs.mihoyo.com/ys/obc/content/1290/detail ) 璃月岩神 <br/>
+
+lv1-90等级突破材料： <br/>
+玄岩之塔46个，石珀168个，坚牢黄玉碎屑1个，坚牢黄玉断片9个，坚牢黄玉块9个，坚牢黄玉6个， <br/>
+史莱姆凝液18个，史莱姆清30个，史莱姆原浆36个，2092530摩拉，大英雄经验419。 <br/>
+	
+单个天赋升级材料： <br/>
+黄金的教导x3、黄金的指引x21、黄金的哲学x38、史莱姆凝液x6、史莱姆清x22、史莱姆原浆x31、 <br/>
+智识之冕x1、**吞天之鲸·只角**x6、165万摩拉。 <br/>
+
+<br/>
+
+---
+
+[枫原万叶]( https://bbs.mihoyo.com/ys/obc/content/2142/detail ) 天地万物皆为空 <br/>
+
+万叶1-90级所需突破材料一览   <br/>
+摩拉x2092530         <br/>
+海灵芝x168           <br/>
+大英雄的经验x419     <br/>
+自在松石碎屑x1       <br/>
+自在松石断片x9       <br/>
+自在松石块x9         <br/>
+自在松石x6           <br/>
+寻宝鸦印x18          <br/>
+藏银鸦印x30          <br/>
+撰金鸦印x36          <br/>
+魔偶机心x46          <br/>
+
+<br/>
+
+三个**天赋**升级材料 <br/>
+摩拉X490万            <br/>
+【勤劳】系列天赋书    <br/>
+寻宝鸦印系列          <br/>
+鎏金之鳞片X18         <br/>
+智识之冕X3            <br/>
+
+
+万叶不亏是人权卡，确实厉害，yyds（永远的神）。聚怪减抗增伤相当厉害，元素越多，怪物越聚集，伤害越高。<br/>
+摘果子爬山跳高，大世界很好用。深渊更是使用排行榜名列前茅的角色。<br/>
+<br/>
+
+
+### 2.3、配队
 
 五星主c：神里绫华、甘雨、胡桃，魈、公子、宵宫，雷神、绫人、一斗、优菈、可莉、迪卢克、刻晴。<br/>
 原神四神：蒙德风神温迪，璃月岩神钟离，稻妻雷神雷电将军，须弥草神纳西妲。<br/>
@@ -535,7 +588,7 @@ Ctrl-切换走路/跑步状态              <br/>
 
 <br/>
 
-### 3.3、圣遗物
+### 2.4、圣遗物
 
 > 圣遗物各部位主副词条属性详解
 
@@ -579,7 +632,7 @@ Ctrl-切换走路/跑步状态              <br/>
 <br/>
 
 
-### 3.4、天赋书
+### 2.5、天赋书
 
 
 一共有三个战斗天赋可升级：  普通攻击(A)  /  元素战技(E)  /  元素爆发(Q)  <br/>
@@ -989,7 +1042,7 @@ Ctrl-切换走路/跑步状态              <br/>
 <br/>
 
 
-### 3.5、元素反应
+### 2.6、元素反应
 
 
 火，水，风，雷，草，冰，岩   七种元素
@@ -1065,9 +1118,7 @@ D13--> D123[草水火]
 
 </mermaid>
 
-- 三种元素，超绽放烈绽放伤害最高。
-
-<br/>
+- 三种元素的超绽放烈绽放伤害最高。
 
 <br/>
 
@@ -1120,5 +1171,5 @@ D12--> D122[水冰]
 
 ---
 
-[^流程图]: 使用mermaid绘制流程图，但常用平台是三个单引号格式 。vuepress项目是箭头格式：头 <mermaid>  尾 </mermaid> 。
+[^流程图]: 使用mermaid绘制流程图，但常用平台是三个【反引号】+mermaid格式。就是esc键下面、1左面的那个波浪线~键，英文输入法下直接按就是反引号。**vuepress**项目是箭头格式：头 `<mermaid>`  尾 `</mermaid>` 。
 
