--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -284,7 +284,7 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 12-1 下半：水深渊法师、冰深渊法师；深渊使徒·激流、深渊使徒·霜落。 <br/>
 12-2 上半：翠翎恐蕈。 <br/>
 12-2 下半：雷音权现。 <br/>
-12-3 上半：圣骸角鳄。(水)、圣骸牙兽(草)。 <br/>
+12-3 上半：圣骸角鳄(水)、圣骸牙兽(草)。 <br/>
 12-3 下半：深罪浸礼者·水火冰驱役者。 <br/>
 
 这几期深渊骗骗花、圣骸兽及深渊法师横行，没有绫华冷冻队不太方便打怪。但是万叶是刚需，尤其是对付骗骗花。<br/>
@@ -1053,7 +1053,7 @@ lv1-90等级突破材料： <br/>
 
 来自 https://bbs.mihoyo.com/ys/article/30600790
 
-<mermaid>
+```mermaid
 graph TD
 雷 --> | 感电 | 水;
 雷 --> | 超载 | 火;
@@ -1073,11 +1073,11 @@ graph TD
 冰 --> | 超导 | 雷;
 冰 --> | 冻结 | 水;
 
-</mermaid>
+```
 
 ---
 
-<mermaid>
+```mermaid
 graph LR
 元素反应 --> A1[增幅]
 元素反应 --> B1[剧变]
@@ -1116,7 +1116,7 @@ D11--> D121[草水]
 D12--> D122[草水雷]
 D13--> D123[草水火]
 
-</mermaid>
+```
 
 - 三种元素的超绽放烈绽放伤害最高。
 
@@ -1127,7 +1127,7 @@ D13--> D123[草水火]
 来自 https://bbs.mihoyo.com/ys/article/2050152
 
 
-<mermaid>
+```mermaid
 graph LR
 元素反应 --> A1[增伤类]
 元素反应 --> B1[额外伤害类]
@@ -1162,7 +1162,7 @@ C121--> C1211[结晶盾承受量仅与等级及元素精通有关]
 D11--> D121[水草]
 D12--> D122[水冰]
 
-</mermaid>
+```
 
 - 元素反应的伤害均与**触发角色**的**元素精通**有着密切的联系。
 - 两种元素，超载的群体伤害最高，感电的单体伤害最高。
